<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ruche_title" />

    <ImageView
        android:id="@+id/imageCCI"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo_cci" />

    <TextView
        android:id="@+id/txtViewDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageTitle"
        android:layout_below="@+id/txtViewLblAddress"
        android:text="@string/district"
        android:textColor="@color/violet" />

    <TextView
        android:id="@+id/txtViewBuilding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageTitle"
        android:layout_below="@+id/txtViewDistrict"
        android:text="@string/building"
        android:textColor="@color/violet" />

    <TextView
        android:id="@+id/txtViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageTitle"
        android:layout_below="@+id/txtViewBuilding"
        android:text="@string/address"
        android:textColor="@color/violet" />

    <TextView
        android:id="@+id/txtViewLblMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewLblPhone"
        android:layout_below="@+id/txtViewLblPhone"
        android:layout_marginTop="29dp"
        android:text="@string/lblMail" />

    <TextView
        android:id="@+id/txtViewLblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewDistrict"
        android:layout_below="@+id/imageTitle"
        android:layout_marginTop="19dp"
        android:text="@string/lblAddress" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/imageCCI"
        android:layout_alignLeft="@+id/txtViewLblMail"
        android:layout_alignRight="@+id/imageTitle"
        android:layout_below="@+id/buttonMail"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/buttonPhone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewLblPhone"
        android:layout_alignBottom="@+id/txtViewLblPhone"
        android:layout_toRightOf="@+id/txtViewLblPhone"
        android:text="@string/phone"
        android:textColor="@color/blue"
        android:layout_marginLeft="3dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/txtViewLblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewAddress"
        android:layout_below="@+id/txtViewAddress"
        android:layout_marginTop="20dp"
        android:text="@string/lblPhone" />

    <Button
        android:id="@+id/buttonMail"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewLblMail"
        android:layout_alignBottom="@+id/txtViewLblMail"
        android:layout_toRightOf="@+id/txtViewLblMail"
        android:text="@string/mail"
        android:textColor="@color/blue"
        android:layout_marginLeft="3dp"
        android:background="@android:color/transparent" />

</RelativeLayout>